force-app/main/default/objects/KimbleOne__ResourceGroupMemberAssignmentTemplate__c/KimbleOne__ResourceGroupMemberAssignmentTemplate__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Group Member Assignment Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Group Member Assignment Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>