force-app/main/default/objects/KimbleOne__ResourceGroupMemberAssignmentTemplate__c/fields/KimbleOne__ResourcedActivity__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourcedActivity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resourced Activity</label>
    <referenceTo>KimbleOne__ResourcedActivity__c</referenceTo>
    <relationshipLabel>Group Member Assignment Template</relationshipLabel>
    <relationshipName>GroupMemberAssignmentTemplate</relationshipName>
    <type>Lookup</type>
</CustomField>