force-app/main/default/objects/KimbleOne__ResourceGroupMemberAssignmentTemplate__c/fields/KimbleOne__UsageBehaviourRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UsageBehaviourRule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Usage Behaviour Rule</label>
    <referenceTo>KimbleOne__UsageBehaviourRule__c</referenceTo>
    <relationshipLabel>Group Member Assignment Template</relationshipLabel>
    <relationshipName>GroupMemberAssignment_Template</relationshipName>
    <type>Lookup</type>
</CustomField>