force-app/main/default/objects/KimbleOne__ResourceGroupMemberAssignmentTemplate__c/fields/KimbleOne__UtilisationPercentage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UtilisationPercentage__c</fullName>
    <label>Utilisation Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>